# Simple-CRUD-WIth-Rust-Actix

./: Cargo.toml  README.md
src/: db.rs  handlers.rs  main.rs  models.rs
