[package]
name = "simple_crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
futures = "0.3"
bson = "1.2"

